--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  sqflite: ^2.2.8+4
+  sqflite_common_ffi: ^2.2.5
+  sqlite3_flutter_libs: any 
+  path_provider: ^2.0.5
   flutter:
     sdk: flutter
 
