--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   sqflite_common_ffi: ^2.2.5
   sqlite3_flutter_libs: any 
   path_provider: ^2.0.5
+  path: ^1.8.0
   flutter:
     sdk: flutter
 
