--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,9 +28,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  # sqflite: ^2.3.0
+  sqflite: ^2.3.0
   sqflite_common_ffi: ^2.2.5
-  sqlite3_flutter_libs: any 
+  # sqlite3_flutter_libs: ^0.5.15 
   path_provider: ^2.0.5
   path: ^1.8.0
   flutter:
